Deletion add improved (by a session_id)

--- a/website/static/styles/style.css
+++ b/website/static/styles/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #eee;
-	/* background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/732/wood-floor.jpg) no-repeat; */
-	background: url(../img/bg_img-0.jpg) no-repeat;
+ 	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/732/wood-floor.jpg) no-repeat; 
+	/*background: url(../img/bg_img-0.jpg) no-repeat;*/
 	background-size: cover;
 	font-family: 'Signika', sans-serif;
 	-webkit-font-smoothing: antialiased;
