--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -20,12 +20,12 @@
     </header>
   </thead>
 
-  <tbody align="center" style="font-size: 150%;">
+  <tbody align="center" style="background-color: rgb(33, 33, 33); color: azure; font-size: 150%;">
     {% for row in body %}
     <tr>
       {% for col in row %}<td>
         <ul class="matchup matchup-{{loop.index}}">
-          {{ col }}
+         {{ col }}
           <!-- <li class="team team-top">big infos</li> -->
           <!-- <li class="team team-bottom">some infos</li> -->
         </ul>
