--- a/website/static/styles/style.css
+++ b/website/static/styles/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #eee;
+	background-color: #161212;
  	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/732/wood-floor.jpg) no-repeat; 
 	/*background: url(../img/bg_img-0.jpg) no-repeat;*/
 	background-size: cover;
@@ -48,300 +48,80 @@ header {
 		}
 	}
 }
-.bracket {
-	display: grid;
-	grid-template-columns: repeat(9, 1fr);
-	grid-template-rows: repeat(94,8px);
-	grid-gap: 2px 6px;
-	grid-auto-flow: column;
-	margin: 20px auto;
-	width:1200px;
-	overflow-y:scroll;
-	
-	@media (min-width:1400px) {
-		grid-template-columns: repeat(11, 1fr);
-		width:1400px;
+
+/* POP-UP WINDOW */
+* {
+	margin: 0;
+	padding: 0;
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box;
+}
+
+body {
+	font-family: 'Helvetica Neue','Helvetica', Arial, sans-serif;
+}
+
+.main-content {
+	height: 800px;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+.overlay-bg {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height:100%;
+	width: 100%;
+	cursor: pointer;
+	z-index: 1000; /* high z-index */
+	background: #000; /* fallback */
+	background: rgba(0,0,0,0.75);
+}
+	.overlay-content {
+		display: none;
+		background: #1b1b1b;
+		padding: 1%;
+		width: 40%;
+		position: absolute;
+		top: 15%;
+		left: 50%;
+		margin: 0 0 0 -20%; /* add negative left margin for half the width to center the div */
+		cursor: default;
+		z-index: 10001;
+		border-radius: 4px;
+		box-shadow: 0 0 5px rgba(0,0,0,0.9);
 	}
-} 
 
-.region {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(46,8px);
-	grid-gap: 2px 6px;
-	grid-auto-flow: column;
-}
-
-.region-1 {
-	grid-column: 1 / span 4;
-	grid-row: 1 / span 47;
-}
-
-.final-four {
-	grid-column: 4 / span 3;
-	grid-row: 45 / span 6;
-	
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(6,8px);
-	grid-gap: 2px 6px;
-	grid-auto-flow: column;
-	
-	@media (min-width:1400px) {
-		grid-column: 5 / span 3;
+	.close-btn {
+		cursor: pointer;
+		border: 1px solid #333;
+		padding: 2% 5%;
+		background: #a9e7f9; /* fallback */
+		background: -moz-linear-gradient(top,  #a9e7f9 0%, #77d3ef 4%, #05abe0 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a9e7f9), color-stop(4%,#77d3ef), color-stop(100%,#05abe0));
+		background: -webkit-linear-gradient(top,  #a9e7f9 0%,#77d3ef 4%,#05abe0 100%);
+		background: -o-linear-gradient(top,  #a9e7f9 0%,#77d3ef 4%,#05abe0 100%);
+		background: -ms-linear-gradient(top,  #a9e7f9 0%,#77d3ef 4%,#05abe0 100%);
+		background: linear-gradient(to bottom,  #a9e7f9 0%,#77d3ef 4%,#05abe0 100%);
+		border-radius: 4px;
+		box-shadow: 0 0 4px rgba(0,0,0,0.3);
 	}
-}
+	.close-btn:hover {
+		background: #05abe0;
+	}
 
-.region-2 {
-	grid-column: 1 / span 4;
-	grid-row: 49 / span 47
-}
+/* media query for most mobile devices */
+@media only screen and (min-width: 0px) and (max-width: 480px){
 
-.region-3 {
-	grid-column: -5 / span 4;
-	grid-row: 1 / span 47;
-}
-
-.region-4 {
-	grid-column: -5 / span 4;
-	grid-row: 49 / span 47
-}
-
-
-ul {
-	margin:0;
-	padding:0;
-	list-style-type:none;
-}
-
-.team {
-	background-color: white;
-	font-size:11px;
-	height:18px;
-	line-height:18px;
-	padding:0 5px;
-}
-
-.team-top {
-	margin-bottom:2px;
-}
-
-.winner {
-	background-color:#005eb8;
-	color: white;
-}
-
-.matchup {
-	grid-column:span 1;
-	grid-row:span 4;
-	box-shadow:1px 1px 10px rgba(0,0,0,.5);
-}
-
-.matchup-1,
-.matchup-9 {
-	grid-column:span 1;
-	grid-row:span 4;
-}
-
-.matchup-2,
-.matchup-10 {
-	grid-row: 7 / span 4;
-}
-
-.matchup-3,
-.matchup-11 {
-	grid-row: 13 / span 4;
-}
-
-.matchup-4,
-.matchup-12 {
-	grid-row: 19 / span 4;
-}
-
-.matchup-5,
-.matchup-13 {
-	grid-row: 25 / span 4;
-}
-
-.matchup-6,
-.matchup-14 {
-	grid-row: 31 / span 4;
-}
-
-.matchup-7,
-.matchup-15 {
-	grid-row: 37 / span 4;
-}
-
-.matchup-8,
-.matchup-16 {
-	grid-row: 43 / span 4;
-}
-
-.matchup-17,
-.matchup-25 {
-	grid-column: -2/span 1;
-	grid-row: 1/span 4;
-}
-
-.matchup-18,
-.matchup-26 {
-	grid-column:-2/span 1;
-	grid-row:7/span 4;
-}
-
-.matchup-19,
-.matchup-27 {
-	grid-column:-2/span 1;
-	grid-row:13/span 4;
-}
-
-.matchup-20,
-.matchup-28 {
-	grid-column:-2/span 1;
-	grid-row:19/span 4;
-}
-
-.matchup-21,
-.matchup-29 {
-	grid-column:-2/span 1;
-	grid-row:25/span 4;
-}
-
-.matchup-22,
-.matchup-30 {
-	grid-column:-2/span 1;
-	grid-row:31/span 4;
-}
-
-.matchup-23,
-.matchup-31 {
-	grid-column:-2/span 1;
-	grid-row:37/span 4;
-}
-
-.matchup-24,
-.matchup-32 {
-	grid-column:-2/span 1;
-	grid-row:43/span 4;
-}
-
-.matchup-33,
-.matchup-37 {
-	grid-column: 2 / span 1;
-	grid-row: 4 / span 4;
-}
-
-.matchup-34,
-.matchup-38 {
-	grid-column: 2 / span 1;
-	grid-row: 16 / span 4;
-}
-
-.matchup-35,
-.matchup-39 {
-	grid-column: 2 / span 1;
-	grid-row: 28 / span 4;
-}
-
-.matchup-36,
-.matchup-40 {
-	grid-column: 2 / span 1;
-	grid-row: 40 / span 4;
-}
-
-.matchup-41,
-.matchup-45 {
-	grid-column: -3 / span 1;
-	grid-row: 4 / span 4;
-}
-
-.matchup-42,
-.matchup-46 {
-	grid-column: -3 / span 1;
-	grid-row: 16 / span 4;
-}
-
-.matchup-43,
-.matchup-47 {
-	grid-column: -3 / span 1;
-	grid-row: 28 / span 4;
-}
-
-.matchup-44,
-.matchup-48 {
-	grid-column: -3 / span 1;
-	grid-row: 40 / span 4;
-}
-
-.matchup-49,
-.matchup-51 {
-	grid-column: 3 / span 1;
-	grid-row: 10 / span 4;
-}
-
-.matchup-50,
-.matchup-52 {
-	grid-column: 3 / span 1;
-	grid-row: 34 / span 4;
-}
-
-.matchup-53,
-.matchup-55 {
-	grid-column: -4 / span 1;
-	grid-row: 10 / span 4;
-}
-
-.matchup-54,
-.matchup-56 {
-	grid-column: -4 / span 1;
-	grid-row: 34 / span 4;
-}
-
-.matchup-57,
-.matchup-58 {
-	grid-column: 4 / span 1;
-	grid-row: 22 / span 4;
-}
-
-.matchup-59,
-.matchup-60 {
-	grid-column: -5 / span 1;
-	grid-row: 22 / span 4;
-}
-
-.matchup-61 {
-	grid-column: 1 / span 1;
-	grid-row: 2/ span 4;
-}
-
-.matchup-62 {
-	grid-column: 3 / span 1;
-	grid-row: 2/ span 4;
-}
-
-.championship {
-	grid-column: 2 / span 1;
-	grid-row: 1/ span 4;
-	.team {
-		height:28px;
-		line-height: 28px;
+	.overlay-content {
+		width: 96%;
+		margin: 0 2%;
+		left: 0;
 	}
 }
-
-.logo {
-	grid-column: 4 / span 3;
-	grid-row: 1;
-	margin:0;
-	
-	@media (min-width: 1400px) {
-		grid-column: 5 / span 3;
-	}
-	
-	img {
-		/* max-width: 100%; */
-		display: block;
-		max-width: 350px;
-		margin-inline: auto;
-	}
+.fa-info-circle:before {
+    content: "\f05a"
 }
