--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -8,10 +8,10 @@
   <colgroup>
     <col style="background-color: rgb(148, 245, 148);" />
   </colgroup>
-  <thead align="center">
+  <thead style="background-color: burlywood; align-self: center;" align="center">
     <header>
       <ol>
-        <th style="background-color: burlywood;">
+        <th>
           <h4>infos</h4>
         </th>
         <!-- {% for header in headers %}
@@ -19,9 +19,9 @@
           <h4>{{ header }}</h4>
         </th>
         {% endfor %} -->
-        <th style="background-color: burlywood;"><h4>{{ headers[1] }}</h4></th>
-        <th style="background-color: burlywood;"><h4>{{ headers[-3] }}</h4></th>
-        <th style="background-color: burlywood;"><h4>{{ headers[-2] }}</h4></th>
+        <th><h4>{{ headers[1] }}</h4></th>
+        <th><h4>{{ headers[-3] }}</h4></th>
+        <th><h4>{{ headers[-2] }}</h4></th>
       </ol>
     </header>
   </thead>
